--- a/福利姬频道总目录/index.html
+++ b/福利姬频道总目录/index.html
@@ -26,7 +26,6 @@
   <p><a href="./51酱全集/menu.html">51酱全集</a></p> 
   <p><a href="./AC爱丽丝Hao姬全集/menu.html">AC爱丽丝Hao姬全集</a></p> 
   <p><a href="./Aram (아람)全集/menu.html">Aram (아람)全集</a></p> 
-  <p><a href="./ArtGravia全集/menu.html">ArtGravia全集</a></p> 
   <p><a href="./Arty亚缇全集/menu.html">Arty亚缇全集</a></p> 
   <p><a href="./Asagiriai（愛ちゃん）全集/menu.html">Asagiriai（愛ちゃん）全集</a></p> 
   <p><a href="./AT鲨全集/menu.html">AT鲨全集</a></p> 
@@ -306,6 +305,7 @@
   <p><a href="./朝雾爱全集/menu.html">朝雾爱全集</a></p> 
   <p><a href="./木之本果全集/menu.html">木之本果全集</a></p> 
   <p><a href="./木绵绵OwO全集/menu.html">木绵绵OwO全集</a></p> 
+  <p><a href="./未整理链接/menu.html">未整理链接</a></p> 
   <p><a href="./末夜787全集/menu.html">末夜787全集</a></p> 
   <p><a href="./杏仁曲奇全集/menu.html">杏仁曲奇全集</a></p> 
   <p><a href="./杏子全集/menu.html">杏子全集</a></p> 
