--- a/advertise.html
+++ b/advertise.html
@@ -40,6 +40,9 @@
   </p>
 
   <p class="channels">
+  	<a href="https://t.me/yunvgongribenchihan" target="_blank" rel="noopener noreferrer">
+      御女宫日本痴汉频道←点击关注
+    </a>
     <a href="https://t.me/yunvfuliji" target="_blank" rel="noopener noreferrer">
       御女宫福利姬频道←点击关注
     </a>
