--- a/advertise.html
+++ b/advertise.html
@@ -40,8 +40,14 @@
   </p>
 
   <p class="channels">
+    <a href="https://t.me/yunvgongshaonvge" target="_blank" rel="noopener noreferrer">
+      御女宫少女阁←点击关注
+    </a>
   	<a href="https://t.me/yunvgongribenchihan" target="_blank" rel="noopener noreferrer">
       御女宫日本痴汉频道←点击关注
+    </a>
+	<a href="https://t.me/yunvgongnvguppai" target="_blank" rel="noopener noreferrer">
+      御女宫水果派AV频道←点击关注
     </a>
     <a href="https://t.me/yunvfuliji" target="_blank" rel="noopener noreferrer">
       御女宫福利姬频道←点击关注
@@ -52,9 +58,7 @@
 	<a href="https://t.me/yunvgongxiaoshuo" target="_blank" rel="noopener noreferrer">
       御女宫小说频道←点击关注
     </a>
-	<a href="https://t.me/yunvgongshuiguopai" target="_blank" rel="noopener noreferrer">
-      御女宫水果派AV频道←点击关注
-    </a>
+
   </p>
 </body>
 </html>
