--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </script>
   <h2>频道目录首页</h2>
   <p><a href="./小说频道总目录/index.html">小说频道总目录</a></p> 
+  <p><a href="./少女阁/index.html">少女阁</a></p> 
   <p><a href="./日本频道总目录/index.html">日本频道总目录</a></p> 
   <p><a href="./漫画频道总目录/index.html">漫画频道总目录</a></p> 
   <p><a href="./福利姬频道总目录/index.html">福利姬频道总目录</a></p> 
