--- a/少女阁/index.html
+++ b/少女阁/index.html
@@ -26,6 +26,56 @@
     document.getElementById("page-title").innerText = folderName + " 资源目录";
     document.title = folderName; // 同时修改网页标签标题
   </script> 
-  <p><a href="https://telegra.ph/C97-EGOLOGY-かづひと-はらぺこがるる-艦隊これくしょん-艦これ-08-31">(C97) [EGOLOGY (かづひと)] はらぺこがるる (艦隊これくしょん-艦これ-)</a></p>
+  <p><a href=" ">御女宫少女阁 少女一</a></p>
+  <p><a href=" ">御女宫少女阁 少女二</a></p>
+<!--   <p><a href=" ">御女宫少女阁 少女三</a></p>
+  <p><a href=" ">御女宫少女阁 少女四</a></p>
+  <p><a href=" ">御女宫少女阁 少女五</a></p>
+  <p><a href=" ">御女宫少女阁 少女六</a></p>
+  <p><a href=" ">御女宫少女阁 少女七</a></p>
+  <p><a href=" ">御女宫少女阁 少女八</a></p>
+  <p><a href=" ">御女宫少女阁 少女九</a></p>
+  <p><a href=" ">御女宫少女阁 少女十</a></p>
+  <p><a href=" ">御女宫少女阁 少女十一</a></p>
+  <p><a href=" ">御女宫少女阁 少女十二</a></p>
+  <p><a href=" ">御女宫少女阁 少女十三</a></p>
+  <p><a href=" ">御女宫少女阁 少女十四</a></p>
+  <p><a href=" ">御女宫少女阁 少女十五</a></p>
+  <p><a href=" ">御女宫少女阁 少女十六</a></p>
+  <p><a href=" ">御女宫少女阁 少女十七</a></p>
+  <p><a href=" ">御女宫少女阁 少女十八</a></p>
+  <p><a href=" ">御女宫少女阁 少女十九</a></p>
+  <p><a href=" ">御女宫少女阁 少女十十</a></p>
+  <p><a href=" ">御女宫少女阁 少女二十一</a></p>
+  <p><a href=" ">御女宫少女阁 少女二十二</a></p>
+  <p><a href=" ">御女宫少女阁 少女二十三</a></p>
+  <p><a href=" ">御女宫少女阁 少女二十四</a></p>
+  <p><a href=" ">御女宫少女阁 少女二十五</a></p>
+  <p><a href=" ">御女宫少女阁 少女二十六</a></p>
+  <p><a href=" ">御女宫少女阁 少女二十七</a></p>
+  <p><a href=" ">御女宫少女阁 少女二十八</a></p>
+  <p><a href=" ">御女宫少女阁 少女二十九</a></p>
+  <p><a href=" ">御女宫少女阁 少女二十十</a></p>
+  <p><a href=" ">御女宫少女阁 少女三十一</a></p>
+  <p><a href=" ">御女宫少女阁 少女三十二</a></p>
+  <p><a href=" ">御女宫少女阁 少女三十三</a></p>
+  <p><a href=" ">御女宫少女阁 少女三十四</a></p>
+  <p><a href=" ">御女宫少女阁 少女三十五</a></p>
+  <p><a href=" ">御女宫少女阁 少女三十六</a></p>
+  <p><a href=" ">御女宫少女阁 少女三十七</a></p>
+  <p><a href=" ">御女宫少女阁 少女三十八</a></p>
+  <p><a href=" ">御女宫少女阁 少女三十九</a></p>
+  <p><a href=" ">御女宫少女阁 少女三十十</a></p> 
+  <p><a href=" ">御女宫少女阁 少女五十一</a></p>
+  <p><a href=" ">御女宫少女阁 少女五十二</a></p>
+  <p><a href=" ">御女宫少女阁 少女五十三</a></p>
+  <p><a href=" ">御女宫少女阁 少女五十四</a></p>
+  <p><a href=" ">御女宫少女阁 少女五十五</a></p>
+  <p><a href=" ">御女宫少女阁 少女五十六</a></p>
+  <p><a href=" ">御女宫少女阁 少女五十七</a></p>
+  <p><a href=" ">御女宫少女阁 少女五十八</a></p>
+  <p><a href=" ">御女宫少女阁 少女五十九</a></p>
+  <p><a href=" ">御女宫少女阁 少女五十十</a></p>    -->
+
 </body>
 </html>
