--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
   <p><a href="./日本频道总目录/index.html">日本频道总目录</a></p> 
   <p><a href="./漫画频道总目录/index.html">漫画频道总目录</a></p> 
   <p><a href="./福利姬频道总目录/index.html">福利姬频道总目录</a></p> 
+  <p><a href="./韩国少女频道/index.html">韩国少女频道</a></p> 
 </body>
 </html>
