--- a/advertise.html
+++ b/advertise.html
@@ -43,7 +43,7 @@
     <a href="https://t.me/yunvgongshaonvge" target="_blank" rel="noopener noreferrer">
       御女宫少女阁←点击关注
     </a>
-  	<a href="https://t.me/yunvgongribenchihan" target="_blank" rel="noopener noreferrer">
+  	<a href="https://t.me/yunvgongribenchihan2" target="_blank" rel="noopener noreferrer">
       御女宫日本痴汉频道←点击关注
     </a>
 	<a href="https://t.me/yunvgongnvguppai" target="_blank" rel="noopener noreferrer">
