--- a/advertise.html
+++ b/advertise.html
@@ -55,8 +55,11 @@
     <a href="https://t.me/yunvgongmanhua" target="_blank" rel="noopener noreferrer">
       御女宫漫画频道←点击关注
     </a>
-	<a href="https://t.me/yunvgongxiaoshuo" target="_blank" rel="noopener noreferrer">
+	  <a href="https://t.me/yunvgongxiaoshuo" target="_blank" rel="noopener noreferrer">
       御女宫小说频道←点击关注
+    </a>
+    <a href="https://t.me/yunvgongmusic" target="_blank" rel="noopener noreferrer">
+      御女宫音乐频道←点击关注
     </a>
 
   </p>
