--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     // 取倒数第二个部分作为目录名
     let folderName = decodeURIComponent(pathParts[pathParts.length - 2]);
     // 设置标题
-    document.getElementById("page-title").innerText = folderName + "频道首页";
+    document.getElementById("page-title").innerText = folderName + "频道首页(可下拉)";
     document.title = folderName; // 同时修改网页标签标题
   </script>
   <h2>频道目录首页</h2>
