--- a/advertise.html
+++ b/advertise.html
@@ -46,7 +46,10 @@
   	<a href="https://t.me/yunvgongribenchihan2" target="_blank" rel="noopener noreferrer">
       御女宫日本痴汉频道←点击关注
     </a>
-	<a href="https://t.me/yunvgongnvguppai" target="_blank" rel="noopener noreferrer">
+    <a href="https://t.me/yunvgongxianggansanji" target="_blank" rel="noopener noreferrer">
+      御女宫香港三级片频道←点击关注
+    </a>
+	  <a href="https://t.me/yunvgongnvguppai" target="_blank" rel="noopener noreferrer">
       御女宫水果派AV频道←点击关注
     </a>
     <a href="https://t.me/yunvfuliji" target="_blank" rel="noopener noreferrer">
@@ -61,7 +64,12 @@
     <a href="https://t.me/yunvgongmusic" target="_blank" rel="noopener noreferrer">
       御女宫音乐频道←点击关注
     </a>
-
+    <a href="https://t.me/yangguangmeiren" target="_blank" rel="noopener noreferrer">
+      御女宫泳装比基尼频道←点击关注
+    </a>
+    <a href="https://t.me/yunvgongjianshennvhai" target="_blank" rel="noopener noreferrer">
+      御女宫健身女孩←点击关注
+    </a>
   </p>
 </body>
 </html>
