--- a/advertise.html
+++ b/advertise.html
@@ -55,7 +55,7 @@
 	  <a href="https://t.me/yunvgongnvguppai" target="_blank" rel="noopener noreferrer">
       御女宫水果派AV频道←点击关注
     </a>
-    <a href="https://t.me/yunvgongguochanAV" target="_blank" rel="noopener noreferrer">
+    <a href="https://t.me/yunvgongguochanAV2" target="_blank" rel="noopener noreferrer">
       御女宫国产AV频道←点击关注
     </a>
     <a href="https://t.me/yunvfuliji" target="_blank" rel="noopener noreferrer">
