--- a/御女宫网页自跳转/index4.html
+++ b/御女宫网页自跳转/index4.html
@@ -26,5 +26,8 @@
 </head>
 <body>
   <a href="https://t.me/yunvgongmuru">👉 点击这里打开 Telegram</a>
+      <a href="https://t.me/yunvgongjianshennvhai" target="_blank" rel="noopener noreferrer">
+      御女宫健身女孩←点击关注
+    </a>
 </body>
 </html>
