--- a/御女宫网页自跳转/index4.html
+++ b/御女宫网页自跳转/index4.html
@@ -2,32 +2,17 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>前往 Telegram</title>
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      background: #f5f5f5;
-    }
-    a {
-      display: inline-block;
-      padding: 15px 30px;
-      font-size: 20px;
-      font-weight: bold;
-      text-decoration: none;
-      color: white;
-      background: #0088cc;
-      border-radius: 12px;
-    }
-  </style>
+  <title>跳转中...</title>
+  <script>
+    window.onload = function() {
+      // 在新窗口/标签页打开
+      window.open("https://t.me/yunvgongjianshennvhai", "_blank", "noopener,noreferrer");
+    };
+  </script>
 </head>
 <body>
-  <a href="https://t.me/yunvgongmuru">👉 点击这里打开 Telegram</a>
-      <a href="https://t.me/yunvgongjianshennvhai" target="_blank" rel="noopener noreferrer">
-      御女宫健身女孩←点击关注
-    </a>
+  <a href="https://t.me/yunvgongjianshennvhai" target="_blank" rel="noopener noreferrer">
+    💪 点击关注 御女宫健身女孩
+  </a>
 </body>
 </html>
