--- a/御女宫网页自跳转/国产AV.html
+++ b/御女宫网页自跳转/国产AV.html
@@ -3,28 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>跳转中...</title>
-  <meta http-equiv="refresh" content="0; url=https://t.me/yunvgongguochanAV2">
-</head>
-<body>
-  <p>正在跳转到 <a href="https://t.me/yunvgongguochanAV2">Telegram</a>...</p>
-</body>
-</html>
-
-
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-  <meta charset="UTF-8">
-  <title>跳转中...</title>
   <style>
     body {
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
       background: #f5f5f5;
       font-family: Arial, sans-serif;
+      gap: 20px;
     }
     a {
       display: inline-block;
@@ -39,26 +28,30 @@
     }
   </style>
   <script>
+    // 定义跳转链接
+    const tgLink = "https://t.me/yunvgongguochanAV2";
+
     function isTelegramInApp() {
       // Telegram 内置浏览器 UA 会包含 "Telegram"
       return navigator.userAgent.includes("Telegram");
     }
 
     window.onload = function() {
-      const link = "https://t.me/yunvgongguochanAV2";
+      const btn = document.getElementById("jump-btn");
+      btn.href = tgLink; // 设置按钮链接
+
       if (isTelegramInApp()) {
         // Telegram 内置浏览器 → 显示按钮
-        document.getElementById("jump-btn").style.display = "inline-block";
+        btn.style.display = "inline-block";
       } else {
         // 普通浏览器 → 自动跳转
-        window.location.href = link;
+        window.location.href = tgLink;
       }
     };
   </script>
 </head>
 <body>
-  <a id="jump-btn" href="https://t.me/yunvgongguochanAV2" 
-     target="_blank" rel="noopener noreferrer" style="display:none;">
+  <a id="jump-btn" target="_blank" rel="noopener noreferrer" style="display:none;">
     💪 点击关注 御女宫国产AV
   </a>
 </body>
