--- a/御女宫网页自跳转/福利姬.html
+++ b/御女宫网页自跳转/福利姬.html
@@ -6,12 +6,14 @@
   <style>
     body {
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
       background: #f5f5f5;
       font-family: Arial, sans-serif;
+      gap: 20px;
     }
     a {
       display: inline-block;
@@ -26,28 +28,31 @@
     }
   </style>
   <script>
+    // 定义跳转链接
+    const tgLink = "https://t.me/yunvfuliji";
+
     function isTelegramInApp() {
       // Telegram 内置浏览器 UA 会包含 "Telegram"
       return navigator.userAgent.includes("Telegram");
     }
 
     window.onload = function() {
-      const link = "https://t.me/yunvfuliji";
+      const btn = document.getElementById("jump-btn");
+      btn.href = tgLink; // 设置按钮链接
+
       if (isTelegramInApp()) {
         // Telegram 内置浏览器 → 显示按钮
-        document.getElementById("jump-btn").style.display = "inline-block";
+        btn.style.display = "inline-block";
       } else {
         // 普通浏览器 → 自动跳转
-        window.location.href = link;
+        window.location.href = tgLink;
       }
     };
   </script>
 </head>
 <body>
-  <a id="jump-btn" href="https://t.me/yunvfuliji" 
-     target="_blank" rel="noopener noreferrer" style="display:none;">
+  <a id="jump-btn" target="_blank" rel="noopener noreferrer" style="display:none;">
     💪 点击关注 御女宫福利姬
   </a>
 </body>
 </html>
-
