--- a/御女宫网页自跳转/国产AV.html
+++ b/御女宫网页自跳转/国产AV.html
@@ -29,7 +29,7 @@
   </style>
   <script>
     // 定义跳转链接
-    const tgLink = "https://t.me/yunvgongguochanAV2";
+    const tgLink = "https://t.me/yunvgongguochanav1";
 
     function isTelegramInApp() {
       // Telegram 内置浏览器 UA 会包含 "Telegram"
