--- a/advertise.html
+++ b/advertise.html
@@ -46,7 +46,7 @@
   	<a href="https://t.me/yunvgongribenchihan2" target="_blank" rel="noopener noreferrer">
       御女宫日本痴汉频道←点击关注
     </a>
-    <a href="https://t.me/yunvgongmuru" target="_blank" rel="noopener noreferrer">
+    <a href="https://t.me/yunvgongmuru1" target="_blank" rel="noopener noreferrer">
       御女宫母乳频道←点击关注
     </a>
     <a href="https://t.me/yunvgongxianggansanji" target="_blank" rel="noopener noreferrer">
